@@ -470,9 +470,6 @@ name|multiFileOutput
 init|=
 name|sw
 operator|.
-name|getBuffer
-argument_list|()
-operator|.
 name|toString
 argument_list|()
 decl_stmt|;
@@ -517,9 +514,6 @@ name|String
 name|singleFileOutput
 init|=
 name|sw
-operator|.
-name|getBuffer
-argument_list|()
 operator|.
 name|toString
 argument_list|()
