@@ -817,9 +817,6 @@ name|multiFileOutput
 init|=
 name|sw
 operator|.
-name|getBuffer
-argument_list|()
-operator|.
 name|toString
 argument_list|()
 decl_stmt|;
@@ -1034,9 +1031,6 @@ name|String
 name|singleFileOutput
 init|=
 name|sw
-operator|.
-name|getBuffer
-argument_list|()
 operator|.
 name|toString
 argument_list|()
