@@ -46,6 +46,15 @@
 
   <target name="javacc" depends="javacc-QueryParser,javacc-surround,javacc-flexible"/>
   
+  <macrodef name="replaceStringBuffer">
+    <attribute name="dir"/>
+    <sequential>
+      <replace token="StringBuffer" value="StringBuilder" encoding="UTF-8">
+         <fileset dir="@{dir}" includes="ParseException.java TokenMgrError.java"/>
+      </replace>
+    </sequential>
+  </macrodef>
+  
   <target name="javacc-QueryParser" depends="resolve-javacc">
     <sequential>
       <invoke-javacc target="src/java/org/apache/lucene/queryparser/classic/QueryParser.jj"
@@ -60,7 +69,7 @@
 		     byline="true"
 		     match="public QueryParser\(QueryParserTokenManager "
 		     replace="protected QueryParser(QueryParserTokenManager "/>
-
+      <replaceStringBuffer dir="src/java/org/apache/lucene/queryparser/classic"/>
     </sequential>
   </target>
 
@@ -68,6 +77,7 @@
   	<invoke-javacc target="src/java/org/apache/lucene/queryparser/surround/parser/QueryParser.jj"
                    outputDir="src/java/org/apache/lucene/queryparser/surround/parser"
     />
+    <replaceStringBuffer dir="src/java/org/apache/lucene/queryparser/surround/parser"/>
   </target>
 
   <target name="javacc-flexible" depends="resolve-javacc">
@@ -126,6 +136,7 @@ import org.apache.lucene.queryparser.flexible.core.messages.*;"
                              replace="  static private String add_escapes(String str) {"
                              flags="g"
                              byline="true"/>
+        <replaceStringBuffer dir="src/java/org/apache/lucene/queryparser/flexible/standard/parser"/>
   </target>
 
   <target name="resolve-javacc" xmlns:ivy="antlib:org.apache.ivy.ant">
