@@ -3727,10 +3727,10 @@ operator|+
 literal|1
 expr_stmt|;
 block|}
-name|StringBuffer
+name|StringBuilder
 name|sb
 init|=
-name|readToStringBuffer
+name|readToStringBuilder
 argument_list|(
 name|replicationTime
 argument_list|,
@@ -3962,7 +3962,7 @@ argument_list|)
 expr_stmt|;
 name|sb
 operator|=
-name|readToStringBuffer
+name|readToStringBuilder
 argument_list|(
 name|replicationTime
 argument_list|,
@@ -4213,10 +4213,10 @@ return|return
 name|bytesDownloaded
 return|;
 block|}
-DECL|method|readToStringBuffer
+DECL|method|readToStringBuilder
 specifier|private
-name|StringBuffer
-name|readToStringBuffer
+name|StringBuilder
+name|readToStringBuilder
 parameter_list|(
 name|long
 name|replicationTime
@@ -4225,11 +4225,11 @@ name|String
 name|str
 parameter_list|)
 block|{
-name|StringBuffer
+name|StringBuilder
 name|sb
 init|=
 operator|new
-name|StringBuffer
+name|StringBuilder
 argument_list|()
 decl_stmt|;
 name|List
