@@ -154,8 +154,6 @@ name|image
 expr_stmt|;
 block|}
 comment|/**    * Returns the image.    */
-annotation|@
-name|Override
 DECL|method|toString
 specifier|public
 name|String
@@ -220,7 +218,7 @@ block|}
 end_class
 
 begin_comment
-comment|/* JavaCC - OriginalChecksum=f463ad6fd3205ca07166de02ee86b907 (do not edit this line) */
+comment|/* JavaCC - OriginalChecksum=9036cc9068ac33d9c79403fe5349f705 (do not edit this line) */
 end_comment
 
 end_unit
