@@ -914,11 +914,11 @@ name|String
 name|s
 parameter_list|)
 block|{
-name|StringBuffer
+name|StringBuilder
 name|sb
 init|=
 operator|new
-name|StringBuffer
+name|StringBuilder
 argument_list|()
 decl_stmt|;
 for|for
@@ -965,12 +965,18 @@ operator|.
 name|append
 argument_list|(
 literal|"("
-operator|+
+argument_list|)
+operator|.
+name|append
+argument_list|(
 operator|(
 name|int
 operator|)
 name|ch
-operator|+
+argument_list|)
+operator|.
+name|append
+argument_list|(
 literal|")"
 argument_list|)
 expr_stmt|;
