@@ -536,11 +536,11 @@ operator|/
 literal|3
 operator|)
 decl_stmt|;
-name|StringBuffer
+name|StringBuilder
 name|result
 init|=
 operator|new
-name|StringBuffer
+name|StringBuilder
 argument_list|(
 name|resultLen
 argument_list|)
